--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cached_network_image: ^3.3.1
   dio: ^5.4.0
   shared_preferences: ^2.0.18
+  share_plus: ^8.0.2
+  sliver_tools: ^0.2.12
 
 dev_dependencies:
   flutter_test:
