--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
   intl: any
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  audioplayers: ^6.0.0
   cached_network_image: ^3.3.1
   dio: ^5.4.0
   shared_preferences: ^2.0.18
   share_plus: ^8.0.2
   sliver_tools: ^0.2.12
+  flutter_cache_manager: ^3.3.2
 
 dev_dependencies:
   flutter_test:
